<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextAlert1Tiime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="time"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="@+id/switchAlert1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/switchAlert1"
                    app:layout_constraintTop_toTopOf="@+id/switchAlert1"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Switch
                    android:id="@+id/switchAlert2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:minHeight="48dp"
                    android:text="@string/alert2Switch"
                    app:layout_constraintStart_toStartOf="@+id/switchAlert1"
                    app:layout_constraintTop_toBottomOf="@+id/switchAlert1" />

                <EditText
                    android:id="@+id/editTextEventTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:hint="Title"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textVieweEventSettings" />

                <EditText
                    android:id="@+id/editTextEventTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="Time"
                    android:inputType="time"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="@+id/editTextEventDate"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEventDate" />

                <TextView
                    android:id="@+id/textVieweEventSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Event Settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextEventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="Date"
                    android:inputType="date"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="@+id/editTextEventLocation"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEventLocation" />

                <EditText
                    android:id="@+id/editTextEventLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="Location"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="@+id/editTextEventTitle"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEventTitle" />

                <TextView
                    android:id="@+id/textViewAlertSettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Alert Settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEventTime" />

                <EditText
                    android:id="@+id/editTextAlert2Time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="time"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="@+id/switchAlert2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/switchAlert2"
                    app:layout_constraintTop_toTopOf="@+id/switchAlert2"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Switch
                    android:id="@+id/switchSmartEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:minHeight="48dp"
                    android:text="@string/smartEventSwitch"
                    app:layout_constraintStart_toStartOf="@+id/switchAlert2"
                    app:layout_constraintTop_toBottomOf="@+id/editTextAlert2Time" />

                <Switch
                    android:id="@+id/switchAlert1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:minHeight="48dp"
                    android:text="@string/alert1Switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewAlertSettings" />

                <EditText
                    android:id="@+id/editTextFrequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="Frequency Per Week"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="@+id/switchSmartEvent"
                    app:layout_constraintTop_toBottomOf="@+id/switchSmartEvent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSaveEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/saveEventButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>